--- a/MVCSample/MVCSample.csproj
+++ b/MVCSample/MVCSample.csproj
@@ -233,6 +233,11 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Views\Home\ChatLog.generated.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ChatLog.cshtml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -245,9 +250,9 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Views\Home\ChatLog.cshtml">
-      <LastGenOutput>ChatLog1.generated.cs</LastGenOutput>
       <CustomToolNamespace>LayIM.NetClient</CustomToolNamespace>
       <Generator>RazorGenerator</Generator>
+      <LastGenOutput>ChatLog.generated.cs</LastGenOutput>
     </None>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
