--- a/MVCSample/MVCSample.csproj
+++ b/MVCSample/MVCSample.csproj
@@ -104,6 +104,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="css\layim.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\chatlog.js" />
     <Content Include="Scripts\jquery.js" />
     <Content Include="Scripts\layui\css\layui.css" />
     <Content Include="Scripts\layui\css\layui.mobile.css" />
@@ -233,10 +234,15 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Views\Home\ChatLog.generated.cs">
+    <Compile Include="Views\Home\ChatLog1.generated.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ChatLog.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Home\HistoryMessageView.generated.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HistoryMessageView.cshtml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -249,9 +255,10 @@
     <Content Include="Scripts\layui\font\iconfont.woff" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Scripts\chatlog.min.js" />
     <None Include="Views\Home\ChatLog.cshtml">
       <CustomToolNamespace>LayIM.NetClient</CustomToolNamespace>
-      <LastGenOutput>ChatLog.generated.cs</LastGenOutput>
+      <LastGenOutput>ChatLog1.generated.cs</LastGenOutput>
       <Generator>RazorGenerator</Generator>
     </None>
     <Content Include="Views\Home\HistoryMessageView.cshtml">
